# typesets

./: .autorc  .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-test.yml  release.yml
codegen/: Cargo.toml
codegen-impl/: Cargo.toml
codegen-impl/src/: lib.rs
codegen-macro/: Cargo.toml
codegen-macro/src/: lib.rs
codegen/src/: lib.rs
example/: Cargo.toml
example-build/: Cargo.toml  build.rs
example-build/src/: main.rs
example-macro/: Cargo.toml
example-macro/src/: main.rs
example/src/: main.rs
supertype/: Cargo.toml
supertype-impl/: Cargo.toml
supertype-impl/examples/: basic.rs
supertype-impl/src/: lib.rs
supertype-macro/: Cargo.toml
supertype-macro/src/: lib.rs
supertype/src/: lib.rs
typesets/: Cargo.toml
typesets-impl/: Cargo.toml
typesets-impl/src/: gen_enum.rs  subtype.rs  supertype.rs
typesets-macro/: Cargo.toml
typesets-macro/src/: lib.rs
typesets-macro/src/impls/: gen_enum.rs  mod.rs  subtype.rs  supertype.rs
typesets/src/: lib.rs
