[package]
name = "supertype_macro"
version = "0.0.1"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the code generation"
repository = "https://github.com/ahl/supertype-template.git"

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1.0.81"
