[package]
name = "typesets-impl"
version = "0.0.1"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the code generation"
repository = "https://github.com/zephraph/typesets.git"

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "1.0.81", features = ["full"] }
thiserror = "1.0.30"
proc-macro-error = "1.0.4"

[dev-dependencies]
similar-asserts = "1.1.0"
rustfmt-wrapper = "0.1.0"
