[package]
name = "typesets-macro"
version = "0.0.1"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Main implementation crate for the code generation"
repository = "https://github.com/zephraph/typesets.git"

[dependencies]
typesets-impl = { path = "../typesets-impl" }
serde_tokenstream = "0.1.2"

[lib]
proc-macro = true
