[package]
name = "typesets-macro"
version = "0.0.2"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "The derive macros for typesets"
repository = "https://github.com/zephraph/typesets.git"

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1"
quote = "1"
serde = "1.0.130"
serde_tokenstream = "0.1.2"
syn = { version = "1.0.81", features = ["full"] }

[dev-dependencies]
similar-asserts = "1.1.0"
rustfmt-wrapper = "0.1.0"

[lib]
proc-macro = true
