[package]
name = "typesets"
version = "0.0.1"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Enables generating subtypes and supertypes of a given type via derive macros"
repository = "https://github.com/zephraph/typesets.git"

[dependencies]
typesets-macro = { path = "../typesets-macro" }
thiserror = "1.0.30"

[dev-dependencies]
rustfmt-wrapper = "0.1.0"