[package]
name = "typesets"
version = "0.0.2"
authors = ["Justin Bennett <oss@just-be.dev>"]
edition = "2018"
license = "Apache-2.0"
description = "Enables generating subtypes and supertypes of a given type via derive macros"
repository = "https://github.com/zephraph/typesets.git"

[dependencies]
thiserror = "1.0.30"
typesets-macro = { path = "../typesets-macro", version = "0.0.2" }

[dev-dependencies]
rustfmt-wrapper = "0.1.0"